Refactor: Service layer improved